--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.12.0",
     "react-lazyload": "^2.6.5",
     "react-scripts": "3.3.0",
-    "react-slick": "^0.25.2"
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
